--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
       <div class="col-xs-12 col-sm-6 col-md-4">
         <div class="card">
           <div class="view overlay">
-            <img class="card-img-top" src="Immagini/card1.jpeg" alt="Card image cap">
+            <img class="card-img-top" src="card1.jpeg" alt="Card image cap">
             <a href="#!">
               <div class="mask rgba-white-slight"></div>
             </a>
@@ -121,7 +121,7 @@
       <div class="col-xs-12 col-sm-6 col-md-4">
         <div class="card mb-4">
           <div class="view overlay">
-            <img class="card-img-top" src="Immagini/card2.jpeg" alt="Card image cap">
+            <img class="card-img-top" src="card2.jpeg" alt="Card image cap">
             <a href="#!">
               <div class="mask rgba-white-slight"></div>
             </a>
@@ -136,7 +136,7 @@
       <div class="col-xs-12 col-sm-6 col-md-4">
         <div class="card mb-4">
           <div class="view overlay">
-            <img class="card-img-top" src="Immagini/card3.jpeg" alt="Card image cap">
+            <img class="card-img-top" src="card3.jpeg" alt="Card image cap">
             <a href="#!">
               <div class="mask rgba-white-slight"></div>
             </a>
