--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
-		<!DOCTYPE html>
-		<html lang="it">
-	<head>
-	  <meta charset="UTF-8">
+<!DOCTYPE html>
+<html lang="it">
+<head>
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Landing Page</title>
   <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css2?family=Alexandria:wght@100..900&family=Lexend:wght@100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
   <!------------------------------------------------------------------------------------------->
 
   <div class="container d-flex flex-column h-100 align-items-center justify-content-center text-center">
-    <p id="title" class="h1">SCOPERTE GEOGRAFICHE</p>
+    <p id="title" class="h1 hover-underline-animation">SCOPERTE GEOGRAFICHE</p>
     <p id="desc">1492: le scoperte che hanno segnato la storia</p>
   </div>
 
@@ -106,7 +106,7 @@
       <div class="col-xs-12 col-sm-6 col-md-4">
         <div class="card">
           <div class="view overlay">
-            <img class="card-img-top" src="card1.jpeg" alt="Card image cap">
+            <img class="card-img-top" src="../Immagini/card1.jpeg" alt="Card image cap">
             <a href="#!">
               <div class="mask rgba-white-slight"></div>
             </a>
@@ -121,7 +121,7 @@
       <div class="col-xs-12 col-sm-6 col-md-4">
         <div class="card mb-4">
           <div class="view overlay">
-            <img class="card-img-top" src="card2.jpeg" alt="Card image cap">
+            <img class="card-img-top" src="../Immagini/card2.jpeg" alt="Card image cap">
             <a href="#!">
               <div class="mask rgba-white-slight"></div>
             </a>
@@ -136,7 +136,7 @@
       <div class="col-xs-12 col-sm-6 col-md-4">
         <div class="card mb-4">
           <div class="view overlay">
-            <img class="card-img-top" src="card3.jpeg" alt="Card image cap">
+            <img class="card-img-top" src="../Immagini/card3.jpeg" alt="Card image cap">
             <a href="#!">
               <div class="mask rgba-white-slight"></div>
             </a>
@@ -172,7 +172,7 @@
 
   <!------------------------------------------------------------------------------------------->
 
-  <script src="script.js"></script>
+  <script src="../js/script.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
